updated results study 1

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -204,7 +204,7 @@ For instance, @murphy2019 notes that some items might measure direct interocepti
 
 <!-- Relationship with other interoception measures -->
 Regarding its validity, the IAS has naturally been compared to other interoception-related measures, and shows a positive correlations with most facets of the MAIA [@mehling2018multidimensional; @gaggero2021], except for the Not-Distracting and Not-Worrying subscales [@brand2023] - which were previously highlighted as related to non-interoceptive abilities [@ferentzi2021examining].
-Interestingly, findings on the correlation between the IAS and the body awareness dimension of the BPQ (i.e., BPQ-A) have been mixed: some studies report small positive correlations [@brand2023; @campos2021; @koike2023], while others find small negative correlations [@lin2023] or no correlation at all [@murphy2019].
+Interestingly, findings on the correlation between the IAS and the body awareness dimension of the BPQ, have been mixed: some studies report small positive correlations [@brand2023; @campos2021; @koike2023], while others find small negative correlations [@lin2023] or no correlation at all [@murphy2019; @gaggero2021].
 Positive correlations have also been observed with the "observation" and "description" subscales of the Five Facet Mindfulness Questionnaire [FFMQ, @baer2006using; @brand2023; @koike2023], as well as with the "non-reactivity" and "acting with awareness" subscales [@koike2023].
 Additionally, the IAS has shown a positive correlation with the interoceptive awareness subscale of the Eating Disorder Inventory [EDI-IA, @lin2023] and a negative correlation with the Interoceptive Confusion Questionnaire [ICQ, @brewer2016alexithymia], as reported by @brand2023 and @murphy2019.
 Lastly, the correlation with the Interoceptive Attention Scale [IATS, @gabriele2022dissociations] appears rather small [@lin2023; @koike2023].
@@ -480,7 +480,7 @@ Age showed consistent positive standardized associations across IAS correlates (
 
 <!-- Interoceptive measures -->
 
-MAIA subscales showed robust positive standardized effects with the IAS. Noticing yielded the strongest association (mean β = .26), followed by Emotional Awareness (β = .20) and related subscales—Body Listening, Attention Regulation, Trusting, and Self-Regulation—each in the .20–.26 range, all significant. Effects were generally strongest for the full IAS, except for Body Listening, which peaked for the Bruise–Blood pairing. Not Distracting was weakly but significantly positive (mean β = .06), primarily for Hungry–Thirsty, Bruise–Blood, and Muscles–Pain. Not Worrying was significant only for the full IAS and the Hungry–Thirsty and Urinate–Defecate pairings (β ≈ −.01 to .11).
+MAIA subscales showed robust positive standardized effects with the IAS. Noticing yielded the strongest association (mean β = .26), followed by Emotional Awareness (β = .20) and related subscales - Body Listening, Attention Regulation, Trusting, and Self-Regulation, each in the .20–.26 range, all significant. Effects were generally strongest for the full IAS, except for Body Listening, which peaked for the Bruise–Blood pairing. Not Distracting was weakly but significantly positive (mean β = .06), primarily for Hungry–Thirsty, Bruise–Blood, and Muscles–Pain. Not Worrying was significant only for the full IAS and the Hungry–Thirsty and Urinate–Defecate pairings (β ≈ −.01 to .11).
 
 Autonomic Reactivity (BPQ; mean β = −.19) was reliably negative across pairings, reaching significance for all except the Bruise–Blood sugar and Breathing–Heart pairings. In contrast, Body Awareness (BPQ; mean β = .12) was weakly positive and significant only for Bruise–Blood.
 
@@ -492,7 +492,7 @@ Depression (BDI; mean β = −.20) and anxiety (STAI-T; mean β = −.19) showed
 
 <!-- Psychopathologies -->
 
-Autistic traits were generally negatively associated with IAS scores. Imagination (mean β = −.18) showed the most consistent pattern across pairings except Cough–Sneeze. Most full-IAS associations were driven by Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain, which yielded the largest negative coefficients. Beyond these, effects weakened or became nonsignificant- Patterns and Numbers showed none, and Borderline Personality was associated only with Hungry–Thirsty (mean β = −.14).
+Autistic traits (ASQ) were generally negatively associated with IAS scores. Imagination (mean β = −.18) showed the most consistent pattern across pairings except Cough–Sneeze. Most full-IAS associations were driven by Hungry–Thirsty, Bruise–Blood sugar, and Muscles–Pain, which yielded the largest negative coefficients. Beyond these, effects weakened or became nonsignificant- Patterns and Numbers showed none, and Borderline Personality was associated only with Hungry–Thirsty (mean β = −.14).
 
 Schizotypal traits showed similarly negative coefficients, with Social Anxiety (mean β = −.11) and No Close Friends (mean β = −.12) most consistent. Some facets were unrelated to the overall IAS but linked to specific pairings: Unusual Perceptions with Muscles–Pain and Urinate–Defecate, and Eccentric with Hungry–Thirsty and Urinate–Defecate.
 
@@ -511,27 +511,28 @@ Overall, the full IAS produced the greatest number of significant standardized e
 ## Discussion
 
 <!-- Aim and conceptual focus -->
-Study 2 examined the dispositional correlates of the IAS and evaluated whether the refined 14-item version offers practical advantages over the original 21-item scale. The findings clarify the conceptual boundaries of self-reported interoceptive accuracy across psychological domains and highlight the domain-specific nature of these associations.
+
+Study 2 examined the dispositional correlates of the IAS and whether the refined 14-item version offers practical advantages over the original 21-item scale. The findings clarify the conceptual boundaries of self-reported interoceptive accuracy and underscore the domain-specific nature of these standardized associations.
 
 <!-- Interoception and correlates - item specific -->
-The IAS correlated robustly with other self-report interoceptive measures, particularly MAIA facets reflecting awareness, regulation, and trust in bodily signals. These associations were stronger with monitoring of autonomic reactivity (BPQ) than with general body awareness (BPQ) replicating previosu findings [@brand2023; @campos2021; @todd2022].  
+The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023]. Associations with the BPQ Body Awareness subscale were consistent with previous reports ona non-existing association between these measures [@murphy2019; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022].
 
-Across mood and interoceptive measures, most item pairings showed at least moderate correlations, suggesting that the IAS shares variance with affective and bodily awareness constructs. In contrast, associations with psychopathology were more selective: significant correlations were mainly observed for visceral pairings such as Hunger–Thirsty and Bruise–Blood sugar, while other pairings were weak or nonsignificant. This pattern points to variation in how different interoceptive domains relate to affective and clinical traits [@murphy2019; @koike2023].
+In contrast, measures of interoceptive difficulties, including alexithymia and interoceptive confusion, were negatively associated with IAS scores, consistent with prior research [@brand2023; @koike2023; @lin2023; @murphy2019]. These associations were strongest for visceral pairings, such as Hungry–Thirsty and Bruise–Blood sugar, and weaker or nonsignificant for other bodily domains, highlighting the domain-specific nature of interoceptive self-report.
+
+Across mood and interoceptive variables, most item pairings displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies. In contrast, associations with psychopathology were more selective: negative βs were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains yielded weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy is more strongly associated with affective and clinical traits for visceral sensations than for exteroceptive or respiratory ones [@murphy2019; @koike2023].
 
 <!-- Personality, worldview, and boundaries of interoception -->
-Associations with personality traits showed similar pattern. Effects for the full IAS often reflected contributions from specific pairings: Breathing–Heart correlated most strongly with Openness; Bruise–Blood sugar and Muscles–Pain with Extraversion; and Hunger–Thirsty with Neuroticism. Additionally, the negative correlation with Honesty–Humility in the full scale was mainly attributable to the Hunger–Thirsty and Bruise–Blood sugar pairings. These findings indicate that the strength of associations between interoceptive self-report and personality traits depends on the bodily domain represented by the items.
 
-Correlations with belief systems were small and inconsistent. Some primal world beliefs (e.g., perceiving the world as alive or comprehensible) showed weak positive associations with the full IAS and with certain pairings [@simkute2025interoception; @haustein2024interoception; @gabriele2022dissociations]. These associations were not uniform across items, again reflecting variability in how interoceptive self-reports relate to broader cognitive or worldview constructs.
+Associations with personality traits followed a similar domain-specific structure. Effects for the full IAS largely reflected contributions from specific pairings: Openness showed its strongest βs for Breathing–Heart, Neuroticism and Honesty–Humility for Hungry–Thirsty and Bruise–Blood sugar, and Conscientiousness for the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented.
 
-Correlations with broader belief systems, including conspiracy beliefs and primal world beliefs, were generally small and inconsistent. Some weak positive associations were observed between the IAS and beliefs that the world is comprehensible or alive, and with certain conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were largely limited to specific pairings, most notably Hunger–Thirsty and Bruise–Blood sugar, suggesting that any links between interoceptive self-report and belief systems are modest and not uniform across bodily domains.
+Associations with belief systems were uniformly small. Weak positive standardized coefficients emerged between the IAS and certain primal world beliefs (e.g., perceiving the world as comprehensible or alive) and selected conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were limited to specific pairings - most often Hungry–Thirsty and Bruise–Blood sugar—indicating that links between interoceptive self-report and broader cognitive or worldview constructs are modest and domain-specific. 
 
 <!-- Contextual sensitivity and scale refinement -->
-Certain item pairings, notably Hunger–Thirsty and Bruise–Blood sugar, correlated with mood and interoceptive measures as strongly as, or more strongly than, the full IAS. These pairings accounted for many of the significant relationships observed across variables, whereas others (e.g., Cough–Sneeze, Wind–Burp) showed few consistent effects.  
-
-The refined 14-item IAS performed comparably to the original 21-item version, maintaining similar patterns of association while reducing item redundancy. This supports the practical utility of the shortened version, which captures the same correlational structure with improved efficiency and interpretability.
+The refined 14-item IAS performed similarly to the original 21-item version, reproducing comparable standardized effect patterns while reducing redundancy. This suggests that the shortened scale captures the same latent structure with improved efficiency and interpretability, though further validation across independent samples is warranted.
 
 <!-- Summary -->
-Overall, correlations between the IAS and external measures were not uniform but varied across bodily domains. The results indicate that some interoceptive item pairings, especially those representing visceral sensations, show stronger and more consistent relationships with interoceptive, affective, and personality measures. The refined 14-item IAS retains these patterns while providing a more concise and interpretable assessment of self-reported interoceptive accuracy.
+
+Overall, standardized effects between the IAS and external constructs were not uniform but varied across bodily domains. Visceral pairings, particularly Hungry–Thirsty and Bruise–Blood sugar, showed the strongest and most consistent standardized relationships with interoceptive, affective, and personality measures. The refined 14-item IAS preserves these domain-specific associations, offering a more parsimonious, though potentially approximateassessment of self-reported interoceptive accuracy.
 
 # General Discussion
 
