--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -840,6 +840,26 @@
   doi = {10.18637/jss.v112.i01},
 }
 
+@article{pearson2022two,
+  title={Two measures of interoceptive sensibility and the relationship with introversion and neuroticism in an adult population},
+  author={Pearson, Alison and Pfeifer, Gaby},
+  journal={Psychological reports},
+  volume={125},
+  number={1},
+  pages={565--587},
+  year={2022},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{leao2025interoception,
+  title={Interoception: Current Knowledge Gaps and Future Directions in Neuroscience, Psychopathology, and Clinical Applications},
+  author={Le{\~a}o, Larissa Medeiros Maia and do R{\^e}go, Am{\'a}lia Cinthia Meneses and Ara{\'u}jo-Filho, Irami},
+  journal={International Journal of Innovative Research in Medical Science (IJIRMS)},
+  volume={10},
+  number={03},
+  year={2025}
+}
+
 @article{torregrossa2022,
 	title = {Interoceptive functioning in schizophrenia and schizotypy},
 	author = {Torregrossa, {Lénie J.} and Amedy, Amad and Roig, Jacqueline and Prada, Andrea and Park, Sohee},
