--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -525,24 +525,20 @@ Overall, the full IAS produced the greatest number of significant standardized e
 Study 2 examined the dispositional correlates of the IAS and whether the refined 14-item version offers practical advantages over the original 21-item scale. The findings clarify the conceptual boundaries of self-reported interoceptive accuracy and underscore the domain-specific nature of these standardized associations.
 
 <!-- Interoception and correlates - item specific -->
-The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023]. Associations with the BPQ Body Awareness subscale were consistent with previous reports ona non-existing association between these measures [@murphy2019; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022].
+The IAS showed positive associations with most MAIA facets, except for the Not-Distracting and Not-Worrying subscales, replicating prior findings [@brand2023]. Associations with the BPQ Body Awareness subscale were consistent with previous reports on a non-existing association between these measures [@murphy2019; @gaggero2021], whereas indices of autonomic reactivity were more strongly and negatively associated with IAS scores, supporting earlier observations that reactivity may reflect aspects of bodily signal processing captured by self-reported interoceptive accuracy [@todd2022].
 
 In contrast, measures of interoceptive difficulties, including alexithymia and interoceptive confusion, were negatively associated with IAS scores, consistent with prior research [@brand2023; @koike2023; @lin2023; @murphy2019]. These associations were strongest for visceral pairings, such as Hungry–Thirsty and Bruise–Blood sugar, and weaker or nonsignificant for other bodily domains, highlighting the domain-specific nature of interoceptive self-report.
 
-Across mood and interoceptive variables, most item pairings displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies. In contrast, associations with psychopathology were more selective: negative βs were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains yielded weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy is more strongly associated with affective and clinical traits for visceral sensations than for exteroceptive or respiratory ones [@murphy2019; @koike2023].
+Across mood and interoceptive variables, most item pairings displayed small-to-moderate standardized coefficients, indicating shared variance between interoceptive self-reports and affective tendencies. In contrast, associations with psychopathology were more selective: negative associations were primarily observed for visceral pairings such as Hungry–Thirsty and Bruise–Blood sugar, whereas other domains yielded weaker or nonsignificant effects. This pattern suggests that self-reported interoceptive accuracy is more strongly associated with affective and clinical traits for visceral sensations than for somatic or respiratory reflexes [@murphy2019; @koike2023].
 
 <!-- Personality, worldview, and boundaries of interoception -->
 
-Associations with personality traits followed a similar domain-specific structure. Effects for the full IAS largely reflected contributions from specific pairings: Openness showed its strongest βs for Breathing–Heart, Neuroticism and Honesty–Humility for Hungry–Thirsty and Bruise–Blood sugar, and Conscientiousness for the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented.
+Associations with personality traits followed a similar domain-specific structure. Effects for the full IAS largely reflected contributions from specific pairings: Openness showed its strongest associations for Breathing–Heart, Neuroticism and Honesty–Humility for Hungry–Thirsty and Bruise–Blood sugar, and Conscientiousness for the full scale. These results indicate that associations between interoceptive self-report and personality dimensions may depend on the bodily domain represented.
 
-Associations with belief systems were uniformly small. Weak positive standardized coefficients emerged between the IAS and certain primal world beliefs (e.g., perceiving the world as comprehensible or alive) and selected conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were limited to specific pairings - most often Hungry–Thirsty and Bruise–Blood sugar—indicating that links between interoceptive self-report and broader cognitive or worldview constructs are modest and domain-specific.
+Associations with belief systems were uniformly small. Weak positive associations emerged between the IAS and certain primal world beliefs (e.g., perceiving the world as comprehensible or alive) and selected conspiracy belief dimensions, particularly Global Conspiracies and Personal Wellbeing. These effects were limited to specific pairings - most often Hungry–Thirsty and Bruise–Blood sugar—indicating that links between interoceptive self-report and broader cognitive or worldview constructs are modest and domain-specific.
 
-<!-- Contextual sensitivity and scale refinement -->
-The refined 14-item IAS performed similarly to the original 21-item version, reproducing comparable standardized effect patterns while reducing redundancy. This suggests that the shortened scale captures the same latent structure with improved efficiency and interpretability, though further validation across independent samples is warranted.
-
-<!-- Summary -->
-
-Overall, standardized effects between the IAS and external constructs were not uniform but varied across bodily domains. Visceral pairings, particularly Hungry–Thirsty and Bruise–Blood sugar, showed the strongest and most consistent standardized relationships with interoceptive, affective, and personality measures. The refined 14-item IAS preserves these domain-specific associations, offering a more parsimonious, though potentially approximateassessment of self-reported interoceptive accuracy.
+<!-- Short IAS benefits and summary-->
+The 14-item IAS performed similarly to the original 21-item version, showing comparable patterns of association with mood, psychopathology, and interoceptive measures. Overall, standardized effects between the IAS and external constructs were not uniform but varied across bodily domains. Visceral item pairs, particularly Hungry–Thirsty and Bruise–Blood sugar, showed the strongest and most consistent relationships with interoceptive, affective, and personality measures, whereas other pairs contributed little unique information, particularily in measures of psychopathologies and beliefs. These findings suggest that the shorter scale efficiently preserves these domain-specific associations, offering a more parsimonious assessment of self-reported interoceptive accuracy, though further validation across independent samples is warranted.
 
 # General Discussion
 
