changes to manuscript

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -147,6 +147,27 @@
   publisher={Cold Spring Harbor Laboratory Press}
 }
 
+@article{petzke2024somatic,
+  title={Somatic symptom distress is not related to cardioceptive accuracy},
+  author={Petzke, Tara M and K{\"o}teles, Ferenc and Pohl, Anna and Witth{\"o}ft, Michael},
+  journal={Journal of Psychosomatic Research},
+  volume={181},
+  pages={111655},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{nord2022interoceptive,
+  title={Interoceptive pathways to understand and treat mental health conditions},
+  author={Nord, Camilla L and Garfinkel, Sarah N},
+  journal={Trends in cognitive sciences},
+  volume={26},
+  number={6},
+  pages={499--513},
+  year={2022},
+  publisher={Elsevier}
+}
+
 @article{jenkinson2024interoception,
   title={Interoception in anxiety, depression, and psychosis: a review},
   author={Jenkinson, Paul M and Fotopoulou, Aikaterini and Iba{\~n}ez, Agustin and Rossell, Susan},
