--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -553,50 +553,7 @@ In contrast, Study 1 applied multiple complementary methods, including EGA, FA, 
 These findings challenge the assumption of IAS unidimensionality [@murphy2019; @brand2023]. Whereas @lin2023 ’s IRT-based approach treated locally dependent items as artefacts to be removed, our results suggest that such dependencies may reflect theoretically meaningful pairs (e.g., Heart–Breath). Because IRT assumes unidimensionality [@nguyen2014introduction], it may have obscured these structured item clusters rather than as theoretically relevant structures within interoceptive accuracy.
 
 <!-- Study 2 findings -->
-
-<!-- - is the IAS really assessing interoception (lack of relationship with BPQ-awareness)
-- breathing - heart the most interoceptive items but less correlated (image figure 3?#)
-- Together, these results indicate that while the full IAS captures broad dispositional tendencies, its significant associations with external measures are frequently underpinned by a subset of item pairings, which appear more sensitive to specific interoceptive and affective domains. -->
-
-Study 2 provided further evidence for a domain-specific perspective. Certain item pairings, particularly Hunger-Thirst, Bruise-Blood sugar, and Muscles-Pain, showed consistent negative correlations with depression and anxiety measures, sometimes approaching or even surpassing the strength of associations observed for the full IAS scale. Notably, Hunger–Thirst and Bruise–Blood sugar were also the only pairs, out of the seven examined, that displayed significant positive correlations with the BPQ Body Awareness subscale, whereas the full IAS scale showed no such association.
-
-Additionally, specific item pairings revealed distinct patterns of association with other interoceptive measures and mental health indices that were not captured by the full IAS. For instance, while the full IAS showed no significant associations with Borderline Personality, the Hunger-Thirst pair exhibited negative correlations. These findings collectively suggest that item-level analyses may uncover more nuanced relationships than those identified by the overall scale. This pattern highlights that questionnaires like the IAS may capture multiple facets of interoception rather than a single underlying dimension.
-
-These findings are in line with inconsistencies found in the literature concerning associations between the IAS and the BPQ Body Awareness. While some studies report significant negative associations [@lin2023], others have observed significant positive associations  [@brand2023; @campos2021; @gaggero2021; @todd2022], and others none at all [@murphy2019]. In our study the full IAS was also not associated with the BPQ Body Awareness. This pattern is consistent with the idea that this subscale may capture maladaptive bodily experiences or autonomic dysfunction, rather than interoceptive accuracy per se.
-
-However, the Body Awareness subscale of the BPQ has also been criticized for its ambiguous instructions. It is often unclear whether respondents should interpret the items as assessing attentional focus on bodily sensations, perceived accuracy in detecting them, or simply the frequency of experiencing such signals. As a result, studies have reported that observed associations vary depending on how the BPQ Body Awareness is interpreted [@campos2021; @gabriele2022dissociations; @gaggero2021]. As such, it is unclear whether the lack of a relationship between the IAS and the BPQ Body Awareness in this study reflects a genuine divergence between the constructs measured by the two scales, or instead arises from ambiguities in how the BPQ Body Awareness is operationalized and interpreted across studies.
-
-We highlight that some IAS pairings may capture interoceptive self-reported accuracy more effectively than the full IAS measure, raising questions about the interpretability of the full scale. In contrast , other pairings (e.g., Cough–Sneeze, Wind–Burp) were weakly or inconsistently related to other variables, raising concerns about their usefulness. Together, these findings indicate that the strength and relevance of interoceptive self-reported accuracy may vary systematically across physiological domains.
-
-At the same time, the interpretation of such associations is complicated by the lack of contextualisation in the items themselves. For example, a racing heart is often associated with anxiety, yet the same sensation can also arise during exercise or other forms of physiological arousal. Without contextual anchors, it remains unclear which bodily states participants are drawing upon when responding, highlighting the interpretive ambiguity of self-reports. In line with prior work emphasizing the importance of contextual factors in the measurement of interoception [@vlemincx2023novel], our results suggest that the value of self-report lies less in broad aggregation across domains and more in the targeted assessment of physiologically and situationally meaningful contexts.
-
-<!-- Correlates of IAS Across Psychological Domains -->
-The dispositional correlates of the IAS help delineate the conceptual boundaries of interoceptive accuracy as a construct. Self-reported interoceptive accuracy, as assessed by the IAS, has been robustly associated with mood-related outcomes, particularly depression and anxiety, underscoring its relevance for affective regulation and bodily state monitoring [@benau2023self; @brand2023]. This aligns with a broader body of research linking affective conditions such as anxiety and depression with altered interoceptive processing [e.g.,@garfinkel2015knowing].
-
-However, recent findings have also reported null or inconsistent associations between interoceptive abilities and mental health symptomatology, suggesting that such relationships may not generalize across all interoceptive domains or measurement modalities (@banellis2025interoceptive; @jenkinson2024interoception). For instance, a recent review by @jenkinson2024interoception found no consistent evidence linking cardiac interoceptive accuracy tasks with anxiety or depression across multiple meta-analyses.Collectively, these findings indicate that relationships between interoceptive accuracy and mental health may vary across bodily domains and measurement modalities. This suggests that the IAS, while informative, may benefit from a more differentiated approach that accounts for domain-specific and contextual influences on self-reported interoceptive accuracy.
-
-In contrast to the relatively stronger associations observed with affective measures, correlations between IAS scores and personality traits were small but directionally consistent. Modest positive associations emerged with Openness, Agreeableness, and Conscientiousness, while Neuroticism and Extraversion showed near-zero relationships, and Honesty–Humility displayed weak negative correlations. This pattern suggests that self-reported interoceptive accuracy, as indexed by the IAS, shares limited but systematic overlap with broad dispositional tendencies -particularly those reflecting intellectual curiosity and creativity, patience and tolerance in interpersonal interactions, and diligence and organizational tendencies [@ashton2007empirical].
-
-Recent evidence supports the view that relationships between interoceptive measures and personality are multifaceted rather than uniform. For instance, @haustein2024interoception reported significant associations between interoceptive awareness (MAIA) and all personality traits except Agreeableness, with Openness showing positive correlations with Body Listening and Emotional Awareness, and Neuroticism showing negative correlations with Self- and Attention Regulation. Similarly, @simkute2025interoception found that task-based indices of interoceptive sensitivity related negatively to Extraversion. Collectively, these findings indicate that interoceptive constructs show distinct and sometimes opposing patterns of association across measurement modalities, suggesting that the IAS relates to a specific, self-evaluative aspect of interoceptive functioning rather than reflecting a general interoceptive or personality-based trait.
-
-A potential key reason for discrepancies in observed associations, including those seen with the IAS, is that self-report questionnaires in interoception often tap into distinct constructs rather than a common underlying dimension [@desmedt2022measures]. Measures labeled as interoceptive sensibility, awareness, or self-reported accuracy capture partially overlapping but empirically distinct facets, with low intercorrelations between questionnaires and items. Consequently, differences in associations with psychological outcomes or personality traits may reflect differences in what each questionnaire assesses rather than true variation in interoceptive functioning.
-
-<!-- Limitations -->
-One limitation worth noting is that we did not evaluate the IAS alongside other widely used questionnaires, such as the BPQ or MAIA. Although both are frequently employed in interoception research, they present important limitations. For example, the MAIA-2 contains subscales (e.g., Not-Worrying, Not-Distracting) with weak reliability and minimal relation to a general interoception factor [@ferentzi2021examining; @rogowska2023validation]. Several other subscales primarily reflect higher-level cognitive tendencies, such as mindfulness and attentional regulation, rather than interoceptive body awareness [@todd2022; @vig2023self]. Similarly, the BPQ’s Body Awareness and Autonomic Reactivity subscales show conceptual and psychometric concerns, and BPQ scores often overlap substantially with negative affect, raising questions about their specificity as measures of interoceptive sensibility [@campos2021; @gabriele2022dissociations; @vig2023self].
-
-Because the IAS is a newly developed questionnaire and the only one designed to assess interoceptive self-reported accuracy - a dimension previously assessed solely through objective tasks such as the HDT and HCT - our focus was on evaluating its structure and correlates without introducing established measures with documented shortcomings. Nonetheless, future research should employ novel methods, such as Exploratory Graph Analysis, to clarify the convergent and divergent validity of these questionnaires across interoceptive domains.
-
-<!-- IAS limitations and potential improvements -->
-Nevertheless, these two studies revealed three main points. First,  in the datasets that included analogue-style ratings, these scales captured greater variability, further enhancing the ability to detect individual differences. Second, a shortened, 14-item version of the IAS retained strong psychometric integrity while removing unstable or redundant items. Third, specific item pairings allowed more precise differentiation among individuals and often outperformed global scores in predictive value. Nevertheless, even this refined IAS has important limitations.
-
-While the 14-item version improves interpretability and efficiency, it continues to underrepresent key interoceptive modalities such as cardiac, respiratory, and nuanced somatosensory signals, limiting its ability to capture the full breadth of interoceptive processes. This shortcoming underscores the need for broader coverage in future scale development. At the same time, analogue-style items and item pairings offer clear advantages: they increase response variability, allow more precise differentiation among individuals, and provide domain-specific indicators that often outperform global scores.
-
-Building on these insights, a next-generation interoception scale could balance breadth (multiple items per modality) with depth (domain-specific subscales), retain the benefits of analogue or wider rating ranges (e.g., 1–7 instead of 1–5), and optimize coverage across physiologically and psychologically relevant bodily domains. Such a scale would improve interpretability, sensitivity, and practical utility, ultimately enabling a more nuanced mapping of interoceptive abilities onto affective, cognitive, and health-related outcomes.
-
-<!-- Conclusion -->
-Taken together, these studies advance understanding of the IAS and interoceptive self-report more broadly. The refined 14-item IAS provides a more efficient and interpretable measure, capturing domain-specific interoceptive signals that show differential associations with psychological outcomes. Associations were consistently stronger with mood measures and compared to personality and beliefs, indicating that self-reported interoceptive accuracy relates more closely to affective experience than to stable dispositional traits.
-
-At the same time, current findings highlight limitations in modality coverage and item specificity, suggesting that future scale development should incorporate multimodal, context-sensitive, and continuous analogue ratings or wider discrete scales to better capture the richness of interoceptive processes and clarify their role in affective, cognitive, and health-related outcomes [@desmedt2022measures; @vlemincx2023novel]. Ultimately, these studies show that the IAS is most informative when treated as a set of domain-specific, context-sensitive indicators rather than as a broad global index, advancing both the measurement and conceptual understanding of interoception.
+Consistent with prior research, self-reported interoceptive accuracy, as assessed by the IAS, showed reliable associations with other interoceptive and interoception-related measures [@brand2023; @garfinkel2015knowing; @gaggero2021]. Positive correlations emerged with interoceptive sensibility, particularly with MAIA facets related to noticing and trusting bodily sensations, attention regulation, and awareness of mind–body integration. In contrast, negative associations were observed with interoceptive deficits such as alexithymia and interoceptive confusion.
 
 
 # References
